2014-03-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, config.h.in, aprx.c:
	    Autoconf test for <sys/wait.h>, and include if available.

	* aprx.h, beacon.c, config.c, digipeater.c, interface.c, netax25.c,
	  telemetry.c, doc/aprx-manual.odt, aprx.8.in:
	    Change single boolean flag 'txok' into multiple interface flags
	    where the 'txok' is just one bit.  Added 'telem-to-is <boolean>'
	    option to <interface>

	* aprsis.c:
	    Warn at startup if an <aprsis> block does not contain passcode.

2014-03-04 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprx.h, beacon.c:
	    Pickup child process exit SIGCHLD signals, and track
	    which child did exit.

	* beacon.c, aprx.c, aprx.h, aprx.conf.in, aprx.8.in:
	    Kamil Palkowiski SQ8KFH's beacon exec idea rewritten to be
	    non-blocking in execution.  The Aprx main loop does not
	    tolerate blocking programs.

	* aprsis.c, ttyreader.c:
	    poll(2) results on file handles asking for POLLIN can include
	    POLLHUP and POLLERR.

2014-03-04 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, doc/aprx-manual.odt:
	    Document <aprsis> passcode a bit more.

	* aprsis.c, aprx.c, aprx.h, netax25.c:
	    Move aprxlog() from aprsis.c to aprx.c.
	    Use aprxlog() instead of open coded logger at netax25.c.
	    Modify which type of APRSIS events get logged without
	    the runtime -L option to the aprxlogfile.

2014-02-26 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in,  agwpesocket.c, aprsis.c, aprx-stat.c, aprx.c, aprx.h,
	  aprxpolls.c, beacon.c, config.h.in, configure.in, digipeater.c,
	  dprsgw.c, dupecheck.c, erlang.c, filter.c, historydb.c, hlog.c,
	  igate.c, interface.c, kiss.c, netax25.c, netresolver.c, pbuf.c,
	  telemetry.c, timercmp.c, ttyreader.c:
	    Change primary time management to use system monotonic clock
	    instead of time-of-day clock that can jump back/forward.